feat: change class of first div in profile page

--- a/LI4.2/Pages/Perfil.razor
+++ b/LI4.2/Pages/Perfil.razor
@@ -14,7 +14,7 @@
     </div>
 
     <div class="flex items-center justify-center min-h-screen">
-        <div class="grid grid-rows-3">
+        <div class="grid grid-rows-3 min-h-screen">
             <!--Multibanco-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
 
