--- a/LI4.2/Pages/Index.razor
+++ b/LI4.2/Pages/Index.razor
@@ -64,7 +64,7 @@
         <div class="bg-blue-500 text-white p-4 rounded-md">
             <h2 class="text-2xl font-bold mb-2">Junte-se a nós hoje!</h2>
             <p class="mb-4">Faça parte da nossa comunidade de entusiastas de automóveis.</p>
-            <a href="/register" class="bg-white text-blue-500 px-4 py-2 rounded-md">Registre-se agora</a>
+            <a href="/register" class="bg-white text-blue-500 px-4 py-2 rounded-md">Registe-se agora</a>
         </div>
     </section>
 </div>
