feat: fix typo so para fazer barulho

--- a/LI4.2/Pages/Licitacoes.razor
+++ b/LI4.2/Pages/Licitacoes.razor
@@ -10,7 +10,7 @@
 <div class="text-white">
 
     <div class="font-bold dark:bg-gray-800 p-4 px-16 mb-8">
-       <div class="text-3xl gap-4">My Auctions</div>
+       <div class="text-3xl gap-4">My Auctions Record</div>
     </div>
 
 </div>
