--- a/LI4.2/Pages/Perfil.razor
+++ b/LI4.2/Pages/Perfil.razor
@@ -5,6 +5,11 @@
 @inject AuthenticationStateProvider authStateProvider
 @attribute [Authorize(Roles = "Administrator,User")]
 
+<style>
+    .form-box{
+        background-color: #12232e;
+    }
+</style>
 
 <div class="text-white">
 
@@ -13,14 +18,14 @@
        <div class="text-2xl">Hello, @username!</div>
     </div>
 
-    <div class="flex items-center justify-center min-h-screen">
-        <div class="grid grid-rows-3 min-h-screen">
+    <div class=" items-center justify-center min-h-screen">
+        <div class="grid  min-h-screen gap-4 p-20">
             <!--Multibanco-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
 
-                <div class="text-xl underline mb-8">Payment Method:</div>
+                <div class="text-2xl underline mb-8">Payment Method:</div>
 
-                <div class="flex items-center justify-center">
+                <div class="flex items-center justify-center mb-8">
                     <div class="">
 
                         <label>
@@ -48,68 +53,90 @@
 
             <!--Entrega-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
-                <a class="text-xl underline">Delivery Details:</a>
+                <div class="text-2xl underline mb-8">Delivery Details:</div>
 
-                <div class="flex items-center justify-center">
+                <div class="flex items-center justify-center mb-8">
                     <label>
                         <input type="radio" name="detalhesEntrega" value="1" checked="@UserDetalhesEntrega(1)" @onclick="() => SelecionarDetalhesEntrega(1)" />
-                        Entrega em Casa
+                        House Delivery
                     </label>
                     <a class="p-4"></a>
                     <label>
                         <input type="radio" name="detalhesEntrega" value="2" checked="@UserDetalhesEntrega(2)" @onclick="() => SelecionarDetalhesEntrega(2)" />
-                        Levantamento na Loja
+                        On Store
                     </label>
                 </div>
             </div>
 
             <!--Mudar PW/Email-->
             <div class="dark:bg-gray-800 mb-8 p-4 px-4">
-                <a class="text-xl underline">Change Profile Details:</a>
+                <div class="text-2xl underline mb-8">Change Profile Details:</div>
 
-                <div>
-                    <label for="passwordAntiga">Palavra-passe Antiga:</label>
-                    <input type="password" id="passwordAntiga" @bind="passwordAntiga"/>
-                </div>
-        
-                <div>
-                    <label for="novaPassword">Nova Palavra-passe:</label>
-                    <input type="password" id="novaPassword" @bind="passwordNova" />
-                </div>
-        
-                <div>
-                    <label for="repetirNovaPassword">Repetir Nova Palavra-passe:</label>
-                    <input type="password" id="repetirNovaPassword" @bind="passwordNovaRepeticao" />
-                </div>
+                <div class="grid grid-cols-2">
+                    <div class="mx-auto">
+                        <div class="font-bold mb-4">Change Password</div>
+                        <div class="mb-4">
+                            <label for="passwordAntiga" class="block text-sm font-semibold text-gray-600">
+                                Old Password:
+                            </label>
+                            <input type="password" id="passwordAntiga" @bind="passwordAntiga"
+                            class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 form-box"/>
+                        </div>
+                
+                        <div class="mb-4">
+                            <label class="block text-sm font-semibold text-gray-600" for="novaPassword">
+                                New Password:
+                            </label>
+                            <input type="password" id="novaPassword" @bind="passwordNova"
+                            class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 form-box"/>
+                        </div>
+                
+                        <div class="mb-8">
+                            <label class="block text-sm font-semibold text-gray-600" for="repetirNovaPassword">
+                                Repeat New Password:
+                            </label>
+                            <input type="password" id="repetirNovaPassword" @bind="passwordNovaRepeticao"
+                            class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 form-box"/>
+                        </div>
 
-                <div>
-                    <button class="mb-5 bg-blue-500 text-blue
-                    px-2 p-2 rounded-md hover:bg-blue-600 focus:outline-none
-                    focus:border-blue-700 focus:ring focus:ring-blue-200
-                    login-button mb-8"
-                            @onclick="AlterarPassword">Guardar nova password</button>
-                    <p>@mensagem</p>
-                </div>
-
-                <div>
-                    <h4>Alterar Email</h4>
-
-                    <div>
-                        <label for="passwordAntiga2">Palavra-passe Antiga:</label>
-                        <input type="password" id="passwordAntiga2" @bind="passwordAntiga2" />
+                        <div class="mb-4">
+                            <button class="mb-5 bg-blue-500 text-blue
+                            px-2 p-2 rounded-md hover:bg-blue-600 focus:outline-none
+                            focus:border-blue-700 focus:ring focus:ring-blue-200
+                            login-button mb-8"
+                                    @onclick="AlterarPassword">Change to New Password</button>
+                            <p>@mensagem</p>
+                        </div>
                     </div>
-                    <div>
-                        <label for="novoEmail">Novo Email:</label>
-                        <input type="email" id="novoEmail" @bind="emailNovo" />
+
+                    <div class="mx-auto">
+                        <div>
+                            <div class="font-bold mb-4">Change Email</div>
+
+                            <div class="mb-4">
+                                <label class="block text-sm font-semibold text-gray-600" for="passwordAntiga2">
+                                    Old Email:
+                                </label>
+                                <input type="password" id="passwordAntiga2" @bind="passwordAntiga2"
+                                class="text-white w-full px-4 py-2 border rounded-md focus:outline-none focus:border-blue-500 form-box"/>
+                            </div>
+                            <div class="mb-8">
+                                <label class="block text-sm font-semibold text-gray-600" for="novoEmail">
+                                    New Email:
+                                </label>
+                                <input type="email" id="novoEmail" @bind="emailNovo"
+                                class="text-white w-full px-4 py-2 border rounded-md focus:outline-none
+                                    focus:border-blue-500 form-box"/>
+                            </div>
+
+                            <button class="mb-5 bg-blue-500 text-blue
+                            px-2 p-2 rounded-md hover:bg-blue-600 focus:outline-none
+                            focus:border-blue-700 focus:ring focus:ring-blue-200
+                            login-button mb-8"
+                                    @onclick="AlterarEmail">Change to New Email</button>
+                        </div>
                     </div>
-
-                    <button class="mb-5 bg-blue-500 text-blue
-                    px-2 p-2 rounded-md hover:bg-blue-600 focus:outline-none
-                    focus:border-blue-700 focus:ring focus:ring-blue-200
-                    login-button mb-8"
-                            @onclick="AlterarEmail">Guardar novo email</button>
                 </div>
-
 
             </div>
         </div>
